--- a/landing.pug
+++ b/landing.pug
@@ -1,6 +1,13 @@
 -var titulo = "Subtítulo Principal"
 -var titulos = ["Título principal", "Subtítulo 1", "Subtítulo 2", "Subtítulo 3"]
 -var usuario = "Memo"
+mixin caja(imagen, titulo, contenido)
+	.caja
+		.caja__imagen: img(src="images/"+imagen)
+		.caja__contenido 
+			h3=titulo
+			p=contenido
+			a.buton Leer más
 
 doctype html 
 html
@@ -23,6 +30,7 @@ html
 				p Lorem, ipsum dolor sit amet consectetur adipisicing. 
 				
 				a.boton Leer más
-		ul
-			each titulo in titulos 
-				li=titulo
+		main.contenido
+			+caja("imagen.png", titulos[1], "Lorem Ipsum whatever")
+			+caja("imagen.png", titulos[2], "Lorem Ipsum whatever")
+			+caja("imagen.png", titulos[3], "Lorem Ipsum whatever")
